--- a/index.html
+++ b/index.html
@@ -199,13 +199,13 @@
     <!-- Navigation -->
     <nav class="container mx-auto px-6 py-6 flex justify-between items-center">
       <div class="text-2xl font-bold">
-        <span class="text-indigo-400">Manveer's </span>Portfolio
+        <span class="text-indigo-400">Manveer </span>Sohal
       </div>
       <div class="hidden md:flex space-x-8">
         <a href="#home" class="nav-link">Home</a>
         <a href="#projects" class="nav-link">Projects</a>
-        <a href="#skills" class="nav-link">Skills</a>
-        <a href="#contact" class="nav-link">Contact</a>
+        <!-- <a href="#skills" class="nav-link">Skills</a>
+        <a href="#contact" class="nav-link">Contact</a> -->
       </div>
       <div class="md:hidden">
         <button id="menu-btn" class="text-xl focus:outline-none">
@@ -225,7 +225,6 @@
       <div class="flex flex-col space-y-8 text-center">
         <a href="#home" class="text-2xl nav-link">Home</a>
         <a href="#projects" class="text-2xl nav-link">Projects</a>
-        <a href="#skills" class="text-2xl nav-link">Skills</a>
         <a href="#contact" class="text-2xl nav-link">Contact</a>
       </div>
     </div>
@@ -237,11 +236,11 @@
     >
       <div class="md:w-1/2 mb-10 md:mb-0">
         <h1 class="text-4xl md:text-6xl font-bold mb-6">
-          Hi, I'm a <span class="text-indigo-400">Developer</span>
+          Hi, I'm a <span class="text-indigo-400">Manveer</span>
         </h1>
-        <p class="text-lg md:text-xl mb-8 opacity-90">
+        <!-- <p class="text-lg md:text-xl mb-8 opacity-90">
           I create analytics on data and model trends and predict outcomes
-        </p>
+        </p> -->
         <div class="flex space-x-4">
           <a
             href="#projects"
@@ -249,12 +248,12 @@
           >
             View Projects
           </a>
-          <a
+          <!-- <a
             href="#contact"
             class="px-6 py-3 border border-indigo-400 rounded-full font-medium hover:bg-indigo-900 transition"
           >
             Contact Me
-          </a>
+          </a> -->
         </div>
       </div>
       <div class="md:w-1/2 flex justify-center">
@@ -349,29 +348,29 @@
             </div>
           </div>
           <p class="mb-4 opacity-90">
-            Dashbaord to analyze players shots taken on court
+            Dashbaord to analyze players current season stats
           </p>
-          <div class="flex justify-between items-center">
-            <div class="flex space-x-2">
+          <div class="flex flex-wrap gap-2">
+            <div class="flex gap-2 items-center">
               <span class="skill-bubble px-3 py-1 rounded-full text-xs"
                 >Python</span
               >
-              <span class="skill-bubble px-3 py-1 rounded-full text-xs">
-                Matplotlib</span
+              <span class="skill-bubble px-3 py-1 rounded-full text-xs"
+                >Matplotlib</span
               >
-              <span class="skill-bubble px-3 py-1 rounded-full text-xs">
-                Seaborn</span
+              <span class="skill-bubble px-3 py-1 rounded-full text-xs"
+                >Seaborn</span
               >
-              <span class="skill-bubble px-3 py-1 rounded-full text-xs">
-                Dash</span
+              <a
+                href="https://nba-dashboard-nloi.onrender.com/"
+                class="text-indigo-400 hover:text-indigo-300"
               >
+                <i class="fas fa-external-link-alt"></i>
+              </a>
             </div>
-            <a
-              href="https://github.com/manveer-sohal/NBA_Dashboard"
-              class="text-indigo-400 hover:text-indigo-300"
+            <span class="skill-bubble px-3 py-1 rounded-full text-xs"
+              >Dash</span
             >
-              <i class="fas fa-external-link-alt"></i>
-            </a>
           </div>
         </div>
 
@@ -490,64 +489,7 @@
       </div>
     </section>
 
-    <!-- Skills Section -->
-    <section id="skills" class="container mx-auto px-6 py-20">
-      <h2 class="text-3xl md:text-4xl font-bold mb-16 text-center">
-        My <span class="text-indigo-400">Skills</span>
-      </h2>
-
-      <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
-        <div class="glass-card p-6 rounded-xl text-center">
-          <div
-            class="w-16 h-16 mx-auto mb-4 bg-indigo-900 rounded-full flex items-center justify-center"
-          >
-            <i class="fas fa-code text-2xl text-indigo-400"></i>
-          </div>
-          <h3 class="text-xl font-bold mb-2">Frontend</h3>
-          <p class="opacity-80 text-sm">
-            React, Next.js, Vue, HTML5, CSS3, Tailwind, GSAP
-          </p>
-        </div>
-
-        <div class="glass-card p-6 rounded-xl text-center">
-          <div
-            class="w-16 h-16 mx-auto mb-4 bg-indigo-900 rounded-full flex items-center justify-center"
-          >
-            <i class="fas fa-server text-2xl text-indigo-400"></i>
-          </div>
-          <h3 class="text-xl font-bold mb-2">Backend</h3>
-          <p class="opacity-80 text-sm">
-            Node.js, Express, MongoDB, Firebase, REST APIs
-          </p>
-        </div>
-
-        <div class="glass-card p-6 rounded-xl text-center">
-          <div
-            class="w-16 h-16 mx-auto mb-4 bg-indigo-900 rounded-full flex items-center justify-center"
-          >
-            <i class="fas fa-paint-brush text-2xl text-indigo-400"></i>
-          </div>
-          <h3 class="text-xl font-bold mb-2">Design</h3>
-          <p class="opacity-80 text-sm">
-            UI/UX, Figma, Adobe XD, Motion Design, 3D Modeling
-          </p>
-        </div>
-
-        <div class="glass-card p-6 rounded-xl text-center">
-          <div
-            class="w-16 h-16 mx-auto mb-4 bg-indigo-900 rounded-full flex items-center justify-center"
-          >
-            <i class="fas fa-gamepad text-2xl text-indigo-400"></i>
-          </div>
-          <h3 class="text-xl font-bold mb-2">Creative</h3>
-          <p class="opacity-80 text-sm">
-            Three.js, WebGL, GLSL, Canvas, Creative Coding
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Contact Section -->
+    <!-- Contact Section
     <section id="contact" class="container mx-auto px-6 py-20">
       <h2 class="text-3xl md:text-4xl font-bold mb-16 text-center">
         Get In <span class="text-indigo-400">Touch</span>
@@ -597,26 +539,24 @@
           </button>
         </form>
       </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
     <footer class="container mx-auto px-6 py-10 text-center opacity-80">
       <div class="flex justify-center space-x-6 mb-6">
-        <a href="#" class="text-xl hover:text-indigo-400 transition">
+        <a
+          href="https://github.com/manveer-sohal"
+          class="text-xl hover:text-indigo-400 transition"
+        >
           <i class="fab fa-github"></i>
         </a>
-        <a href="#" class="text-xl hover:text-indigo-400 transition">
+        <a
+          href="https://www.linkedin.com/in/manveersohal/"
+          class="text-xl hover:text-indigo-400 transition"
+        >
           <i class="fab fa-linkedin"></i>
         </a>
-        <a href="#" class="text-xl hover:text-indigo-400 transition">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="#" class="text-xl hover:text-indigo-400 transition">
-          <i class="fab fa-codepen"></i>
-        </a>
       </div>
-      <p class="mb-2">© 2023 Liquid Portfolio. All rights reserved.</p>
-      <p class="text-sm opacity-60">Crafted with ❤️ and liquid motion</p>
     </footer>
 
     <script>
@@ -656,66 +596,6 @@
         });
       });
 
-      // Liquid Background Animation with Three.js
-      const canvas = document.getElementById("liquid-canvas");
-      const renderer = new THREE.WebGLRenderer({
-        canvas,
-        antialias: true,
-        alpha: true,
-      });
-
-      renderer.setSize(window.innerWidth, window.innerHeight);
-
-      const scene = new THREE.Scene();
-      const camera = new THREE.PerspectiveCamera(
-        75,
-        window.innerWidth / window.innerHeight,
-        0.1,
-        1000
-      );
-      camera.position.z = 5;
-
-      // Create liquid geometry
-      const geometry = new THREE.SphereGeometry(1, 32, 32);
-      const material = new THREE.MeshPhongMaterial({
-        color: 0x6366f1,
-        transparent: true,
-        opacity: 0.3,
-        shininess: 100,
-        wireframe: true,
-      });
-
-      const liquid = new THREE.Mesh(geometry, material);
-      scene.add(liquid);
-
-      // Add lights
-      const ambientLight = new THREE.AmbientLight(0x404040);
-      scene.add(ambientLight);
-
-      const directionalLight = new THREE.DirectionalLight(0xffffff, 0.5);
-      directionalLight.position.set(1, 1, 1);
-      scene.add(directionalLight);
-
-      // Animation loop
-      let time = 0;
-      function animate() {
-        requestAnimationFrame(animate);
-
-        time += 0.01;
-
-        // Morph the liquid shape
-        liquid.rotation.x = time * 0.2;
-        liquid.rotation.y = time * 0.3;
-
-        // Create a gentle pulsing effect
-        const scale = 1 + Math.sin(time * 0.5) * 0.1;
-        liquid.scale.set(scale, scale, scale);
-
-        renderer.render(scene, camera);
-      }
-
-      animate();
-
       // Handle window resize
       window.addEventListener("resize", () => {
         camera.aspect = window.innerWidth / window.innerHeight;
@@ -738,26 +618,26 @@
         });
       });
 
-      // Form submission
-      const contactForm = document.getElementById("contact-form");
-      contactForm.addEventListener("submit", (e) => {
-        e.preventDefault();
+      // // Form submission
+      // const contactForm = document.getElementById("contact-form");
+      // contactForm.addEventListener("submit", (e) => {
+      //   e.preventDefault();
 
-        // Get form values
-        const name = document.getElementById("name").value;
-        const email = document.getElementById("email").value;
-        const subject = document.getElementById("subject").value;
-        const message = document.getElementById("message").value;
+      //   // Get form values
+      //   const name = document.getElementById("name").value;
+      //   const email = document.getElementById("email").value;
+      //   const subject = document.getElementById("subject").value;
+      //   const message = document.getElementById("message").value;
 
-        // Here you would typically send the form data to a server
-        console.log({ name, email, subject, message });
+      //   // Here you would typically send the form data to a server
+      //   console.log({ name, email, subject, message });
 
-        // Show success message
-        alert("Thank you for your message! I will get back to you soon.");
+      //   // Show success message
+      //   alert("Thank you for your message! I will get back to you soon.");
 
-        // Reset form
-        contactForm.reset();
-      });
+      //   // Reset form
+      //   contactForm.reset();
+      // });
     </script>
   </body>
 </html>
