updated descriptions, html, and NBA Dashboard project image

--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
             </div>
           </div>
           <p class="mb-4 opacity-90">
-            An interactive Wardrobe organize dashboard with auth0 autenticaiton
-            and information storage
+            An interactive Wardrobe organizing dashboard where users can upload
+            pictures of clothing items with filtering
           </p>
           <div class="flex justify-between items-center">
             <div class="flex space-x-2">
@@ -333,7 +333,7 @@
         <div class="project-card glass-card p-6 rounded-2xl">
           <div class="relative h-48 mb-6 rounded-xl overflow-hidden">
             <img
-              src="NBA_Dashboard.png"
+              src="NBA_Dashboardv2.png"
               alt="Project 2"
               class="w-full h-full object-cover"
             />
@@ -348,7 +348,8 @@
             </div>
           </div>
           <p class="mb-4 opacity-90">
-            Dashbaord to analyze players current season stats
+            Interactive dashbaord to analyze NBA players current season stats
+            with analysis
           </p>
           <div class="flex flex-wrap gap-2">
             <div class="flex gap-2 items-center">
@@ -361,6 +362,10 @@
               <span class="skill-bubble px-3 py-1 rounded-full text-xs"
                 >Seaborn</span
               >
+
+              <span class="skill-bubble px-3 py-1 rounded-full text-xs"
+                >Dash</span
+              >
               <a
                 href="https://nba-dashboard-nloi.onrender.com/"
                 class="text-indigo-400 hover:text-indigo-300"
@@ -368,9 +373,6 @@
                 <i class="fas fa-external-link-alt"></i>
               </a>
             </div>
-            <span class="skill-bubble px-3 py-1 rounded-full text-xs"
-              >Dash</span
-            >
           </div>
         </div>
 
@@ -393,7 +395,7 @@
           <p class="mb-4 opacity-90">
             Predicts the user's emotional state by applying a K-Nearest
             Neighbors clustering model to feature vectors extracted from their
-            recently played tracks via the Spotify API.
+            recently played tracks via the Spotify API
           </p>
           <div class="flex justify-between items-center">
             <div class="flex space-x-2">
@@ -432,7 +434,10 @@
               <p class="text-sm opacity-80">Yolov8, Mapbox</p>
             </div>
           </div>
-          <p class="mb-4 opacity-90">Crash detection on street footage</p>
+          <p class="mb-4 opacity-90">
+            Yolo Crash detection on street footage with interactive MapBox
+            display
+          </p>
           <div class="flex justify-between items-center">
             <div class="flex space-x-2">
               <span class="skill-bubble px-3 py-1 rounded-full text-xs"
