updated project description and added link for Odin Analyitca

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
           </div>
           <p class="mb-4 opacity-90">
             An interactive Wardrobe organizing dashboard where users can upload
-            pictures of clothing items with filtering
+            pictures of clothing items with filtering <p class=" mb-4 text-sm opacity-60">(For now backend services are down)</p>
           </p>
           <div class="flex justify-between items-center">
             <div class="flex space-x-2">
@@ -435,8 +435,9 @@
             </div>
           </div>
           <p class="mb-4 opacity-90">
-            Yolo Crash detection on street footage with interactive MapBox
-            display
+            Hackathon winner, turned Start up, that does Yolo Crash detection on street footage with interactive MapBox
+            display <p class=" mb-4 text-sm opacity-60">(For now, link jumps to the landing page as it is not being hosted
+            yet)</p>
           </p>
           <div class="flex justify-between items-center">
             <div class="flex space-x-2">
@@ -447,7 +448,10 @@
                 >Mapbox</span
               >
             </div>
-            <a href="#" class="text-indigo-400 hover:text-indigo-300">
+            <a
+              href="https://v0-odin-analytica-landing.vercel.app/"
+              class="text-indigo-400 hover:text-indigo-300"
+            >
               <i class="fas fa-external-link-alt"></i>
             </a>
           </div>
