--- a/index.html
+++ b/index.html
@@ -417,13 +417,53 @@
 
         <!-- Project 4 -->
         <div class="project-card glass-card p-6 rounded-2xl relative">
+          
+          <div class="relative h-48 mb-6 rounded-xl overflow-hidden">
+            <img
+              src="OAD-Dashboard.png"
+              alt="Project 4"
+              class="w-full h-full object-cover"
+            />
+            <div
+              class="absolute inset-0 bg-gradient-to-t from-black to-transparent opacity-70"
+            ></div>
+            <div class="absolute bottom-4 left-4">
+              <h3 class="text-xl font-bold">DOA Treasury Dashboard </h3>
+              <p class="text-sm opacity-80">Next.js, Ts</p>
+            </div>
+          </div>
+          <p class="mb-4 opacity-90">
+            Dashboard where you can log in with your wallet, see your stats, and also see analytics of APR's and APY's from different projects
+           </p>
+          </p>
+          <div class="flex justify-between items-center">
+            <div class="flex space-x-2">
+              <span class="skill-bubble px-3 py-1 rounded-full text-xs"
+                >Next.js</span
+              >
+              <span class="skill-bubble px-3 py-1 rounded-full text-xs"
+                >Ts</span
+              >
+            </div>
+            <a
+              href="https://dao-treasury-dashboard.vercel.app/"
+              class="text-indigo-400 hover:text-indigo-300"
+            >
+              <i class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+        </div>
+
+
+        <!-- Project 5 -->
+        <div class="project-card glass-card p-6 rounded-2xl relative">
           <div class="hackathon-badge">
             <i class="fas fa-trophy mr-1"></i> Best Data-Hack
           </div>
           <div class="relative h-48 mb-6 rounded-xl overflow-hidden">
             <img
               src="OdinAnalytica.png"
-              alt="Project 4"
+              alt="Project 5"
               class="w-full h-full object-cover"
             />
             <div
@@ -457,7 +497,7 @@
           </div>
         </div>
 
-        <!-- Project 5 -->
+        <!-- Project 6 -->
         <div class="project-card glass-card p-6 rounded-2xl relative">
           <div class="hackathon-badge">
             <i class="fas fa-trophy mr-1"></i> Best use of Auth0
@@ -465,7 +505,7 @@
           <div class="relative h-48 mb-6 rounded-xl overflow-hidden">
             <img
               src="StudySync.png"
-              alt="Project 5"
+              alt="Project 6"
               class="w-full h-full object-cover"
             />
             <div
