updated site link and refined the description for OdinAnalytica

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
             </div>
           </div>
           <p class="mb-4 opacity-90">
-            Hackathon winner, turned Start up, that does Yolo Crash detection on street footage with interactive MapBox
+            Hackathon winner, turned Start up, that does Yolo Crash detection and traffic analytics on street footage with interactive MapBox
             display <p class=" mb-4 text-sm opacity-60">(For now, link jumps to the landing page as it is not being hosted
             yet)</p>
           </p>
@@ -489,7 +489,7 @@
               >
             </div>
             <a
-              href="https://v0-odin-analytica-landing.vercel.app/"
+              href="https://www.odinanalytica.ca/"
               class="text-indigo-400 hover:text-indigo-300"
             >
               <i class="fas fa-external-link-alt"></i>
