Updated text for StudySync and Odin Analytica, Updated link for StudySync

--- a/index.html
+++ b/index.html
@@ -476,8 +476,7 @@
           </div>
           <p class="mb-4 opacity-90">
             Hackathon winner, turned Start up, that does Yolo Crash detection and traffic analytics on street footage with interactive MapBox
-            display <p class=" mb-4 text-sm opacity-60">(For now, link jumps to the landing page as it is not being hosted
-            yet)</p>
+            display <p class=" mb-4 text-sm opacity-60">(Built at Geese Hacks!)</p>
           </p>
           <div class="flex justify-between items-center">
             <div class="flex space-x-2">
@@ -519,7 +518,7 @@
           <p class="mb-4 opacity-90">
             A study site that lets users transcribe from Speach to text and
             video to text to get a summarzied description as well as quiz
-            generations
+            generations <p class=" mb-4 text-sm opacity-60">(Built at Hack The North!)</p>
           </p>
           <div class="flex justify-between items-center">
             <div class="flex space-x-2">
@@ -530,7 +529,7 @@
                 >Auth0</span
               >
             </div>
-            <a href="#" class="text-indigo-400 hover:text-indigo-300">
+            <a href="https://devpost.com/software/studying-with-hack-the-north" class="text-indigo-400 hover:text-indigo-300">
               <i class="fas fa-external-link-alt"></i>
             </a>
           </div>
