--- a/index.html
+++ b/index.html
@@ -288,6 +288,46 @@
       </h2>
 
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+         <!-- Project 1 -->
+        <div class="project-card glass-card p-6 rounded-2xl">
+          <div class="relative h-48 mb-6 rounded-xl overflow-hidden">
+            <img
+              src="Creator_Control_Room.png"
+              alt="Project 1"
+              class="w-full h-full object-cover"
+            />
+            <div
+              class="absolute inset-0 bg-gradient-to-t from-black to-transparent opacity-70"
+            ></div>
+            <div class="absolute bottom-4 left-4">
+              <h3 class="text-xl font-bold">Creator Control Room</h3>
+              <p class="text-sm opacity-80">TS, React, Docker, S3, PostgreSQL</p>
+            </div>
+          </div>
+          <p class="mb-4 opacity-90">
+            Analytical dashboard to see and keep track of live twitch events and trends. Sign on creators using twith auth, and using an interactive dashboard, see events like new gifts, followers and subsribes in real time. 
+          </p>
+          <div class="flex justify-between items-center">
+            <div class="flex space-x-2">
+              <span class="skill-bubble px-3 py-1 rounded-full text-xs"
+                >TS & React</span
+              >
+              <span class="skill-bubble px-3 py-1 rounded-full text-xs">
+                Socket.io</span
+              >
+              <span class="skill-bubble px-3 py-1 rounded-full text-xs">
+                Docker</span
+              >
+            </div>
+            <a
+              href="https://github.com/manveer-sohal/Creator-Control-Room"
+              class="text-indigo-400 hover:text-indigo-300"
+            >
+              <i class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+        </div>
+
         <!-- Project 1 -->
         <div class="project-card glass-card p-6 rounded-2xl">
           <div class="relative h-48 mb-6 rounded-xl overflow-hidden">
@@ -306,12 +346,12 @@
           </div>
           <p class="mb-4 opacity-90">
             An interactive Wardrobe organizing dashboard where users can upload
-            pictures of clothing items with filtering <p class=" mb-4 text-sm opacity-60">(For now backend services are down)</p>
+            pictures of clothing items with filtering 
           </p>
           <div class="flex justify-between items-center">
             <div class="flex space-x-2">
               <span class="skill-bubble px-3 py-1 rounded-full text-xs"
-                >React</span
+                >TS & React</span
               >
               <span class="skill-bubble px-3 py-1 rounded-full text-xs">
                 Docker</span
