updated description of project

--- a/wardrobe-organizer.html
+++ b/wardrobe-organizer.html
@@ -63,12 +63,18 @@
           An interactive Wardrobe organizing dashboard where users can upload
           pictures of clothing items with filtering.
         </p>
+        <p class="opacity-80 max-w-3xl">
+          No longer have to worry about finding your clothes in your messy
+          wardrobe. Or spend hours sorting through your clothes to find the
+          perfect outfit. All you have to do is upload your clothes, and the
+          dashboard will do the rest.
+        </p>
       </header>
 
       <div class="grid md:grid-cols-2 gap-8 items-start">
         <div class="glass-card rounded-2xl overflow-hidden">
           <img
-            src="almaari-pic.png"
+            src="Almaari/dashboard.png"
             alt="Wardrobe Organizer"
             class="w-full h-full object-cover"
           />
@@ -78,6 +84,9 @@
           <div class="flex flex-wrap gap-2 mb-6">
             <span class="skill-bubble px-3 py-1 rounded-full text-xs"
               >TypeScript</span
+            >
+            <span class="skill-bubble px-3 py-1 rounded-full text-xs"
+              >Node.js</span
             >
             <span class="skill-bubble px-3 py-1 rounded-full text-xs"
               >React</span
@@ -98,6 +107,31 @@
               >Live Demo</a
             >
           </div>
+        </div>
+      </div>
+
+      <div class="w-full my-6">
+        <h2 class="text-center text-4xl font-semibold mb-4">Features</h2>
+      </div>
+
+      <div class="grid md:grid-cols-2 gap-8 items-start">
+        <div class="glass-card rounded-2xl overflow-hidden">
+          <img
+            src="Almaari/addClothes.png"
+            alt="Wardrobe Organizer"
+            class="w-full h-full object-cover"
+          />
+        </div>
+        <div class="glass-card p-6 rounded-2xl">
+          <h2 class="text-xl font-semibold mb-4">Clothes Upload</h2>
+          <div class="flex flex-wrap gap-2 mb-6">
+            <p>
+              Users can add clothes to their wardrobe by uploading pictures of
+              the clothes.
+            </p>
+            <p>- Label the type of clothing, color, and style.</p>
+          </div>
+          <div class="flex gap-4"></div>
         </div>
       </div>
     </main>
