added more description

--- a/wardrobe-organizer.html
+++ b/wardrobe-organizer.html
@@ -58,11 +58,22 @@
 
     <main class="container mx-auto px-6 pb-24">
       <header class="py-10">
-        <h1 class="text-3xl md:text-5xl font-bold mb-4">Wardrobe Organizer</h1>
+        <div class="flex items-center gap-2">
+          <img
+            src="Almaari/almaari-mascot-waving.png"
+            alt="Almaari"
+            class="w-20 h-20"
+          />
+          <h1 class="text-3xl md:text-5xl font-bold mb-4">
+            Wardrobe Organizer
+          </h1>
+        </div>
         <p class="opacity-80 max-w-3xl">
           An interactive Wardrobe organizing dashboard where users can upload
-          pictures of clothing items with filtering.
+          pictures of clothing items with filtering, create outfits and get tips
+          from Almaari! an AI assistant.
         </p>
+        <br />
         <p class="opacity-80 max-w-3xl">
           No longer have to worry about finding your clothes in your messy
           wardrobe. Or spend hours sorting through your clothes to find the
@@ -130,6 +141,64 @@
               the clothes.
             </p>
             <p>- Label the type of clothing, color, and style.</p>
+          </div>
+          <div class="flex gap-4"></div>
+        </div>
+      </div>
+      <br />
+      <br />
+      <br />
+
+      <div class="grid md:grid-cols-2 gap-8 items-start">
+        <div class="glass-card rounded-2xl overflow-hidden">
+          <img
+            src="Almaari/Sweater-added.png"
+            alt="Wardrobe Organizer"
+            class="w-full h-full object-cover"
+          />
+        </div>
+        <div class="glass-card p-6 rounded-2xl">
+          <h2 class="text-xl font-semibold mb-4">Dashboard</h2>
+          <div class="flex flex-wrap gap-2 mb-6">
+            <p>
+              Users can see all their clothes in a dashboard, and filter them by
+              type, color, and style.
+            </p>
+            <p>- Filter by searchbar or sidebar.</p>
+          </div>
+          <div class="flex gap-4"></div>
+        </div>
+      </div>
+
+      <br />
+      <br />
+      <br />
+
+      <div class="grid md:grid-cols-2 gap-8 items-start">
+        <div class="glass-card rounded-2xl overflow-hidden">
+          <img
+            src="Almaari/Clothes-picked.png"
+            alt="Wardrobe Organizer"
+            class="w-full h-full object-cover"
+          />
+        </div>
+        <div class="glass-card p-6 rounded-2xl">
+          <h2 class="text-xl font-semibold mb-4">Create Outfits</h2>
+          <div class="flex flex-wrap gap-2 mb-6">
+            <p>
+              Users can create outfits by picking clothes from their wardrobe
+              and save them to their wardrobe.
+            </p>
+            <br />
+            <p>
+              Users can also get tips on how to style their clothes from an AI
+              assistant named Almaari!
+              <img
+                src="Almaari/almaari-mascot-waving.png"
+                alt="Almaari"
+                class="w-20 h-20"
+              />
+            </p>
           </div>
           <div class="flex gap-4"></div>
         </div>
