added link to website

--- a/creator-control-room.html
+++ b/creator-control-room.html
@@ -99,11 +99,11 @@
           </div>
           <div class="flex gap-4">
             <a
-              href="https://github.com/manveer-sohal/Creator-Control-Room"
+              href="https://creator-control-room.vercel.app/login"
               target="_blank"
               rel="noopener"
               class="px-4 py-2 bg-indigo-600 rounded-lg hover:bg-indigo-700"
-              >View Code</a
+              >Live Demo</a
             >
           </div>
         </div>
