--- a/index.html
+++ b/index.html
@@ -401,6 +401,48 @@
           </div>
         </div>
 
+
+        <!-- Project 5 -->
+        <div class="project-card glass-card p-6 rounded-2xl relative cursor-pointer" data-link="odinanalytica.html" tabindex="0">
+          <div class="hackathon-badge">
+            <i class="fas fa-trophy mr-1"></i> Best Data-Hack
+          </div>
+          <div class="relative h-48 mb-6 rounded-xl overflow-hidden">
+            <img
+              src="OdinAnalytica.png"
+              alt="Project 5"
+              class="w-full h-full object-cover"
+            />
+            <div
+              class="absolute inset-0 bg-gradient-to-t from-black to-transparent opacity-70"
+            ></div>
+            <div class="absolute bottom-4 left-4">
+              <h3 class="text-xl font-bold">OdinAnalytica</h3>
+              <p class="text-sm opacity-80">Yolov8, Mapbox</p>
+            </div>
+          </div>
+          <p class="mb-4 opacity-90">
+            Hackathon winner, turned Start up, that does Yolo Crash detection and traffic analytics on street footage with interactive MapBox
+            display <p class=" mb-4 text-sm opacity-60">(Built at Geese Hacks!)</p>
+          </p>
+          <div class="flex justify-between items-center">
+            <div class="flex space-x-2">
+              <span class="skill-bubble px-3 py-1 rounded-full text-xs"
+                >Yolov8</span
+              >
+              <span class="skill-bubble px-3 py-1 rounded-full text-xs"
+                >Mapbox</span
+              >
+            </div>
+            <a
+              href="https://www.odinanalytica.ca/"
+              class="text-indigo-400 hover:text-indigo-300"
+            >
+              <i class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+        </div>
+
        
 
         <!-- Project 2 -->
@@ -450,6 +492,48 @@
           </div>
         </div>
 
+
+
+
+
+        <!-- Project 6 -->
+        <div class="project-card glass-card p-6 rounded-2xl relative cursor-pointer" data-link="studysync.html" tabindex="0">
+          <div class="hackathon-badge">
+            <i class="fas fa-trophy mr-1"></i> Best use of Auth0
+          </div>
+          <div class="relative h-48 mb-6 rounded-xl overflow-hidden">
+            <img
+              src="StudySync.png"
+              alt="Project 6"
+              class="w-full h-full object-cover"
+            />
+            <div
+              class="absolute inset-0 bg-gradient-to-t from-black to-transparent opacity-70"
+            ></div>
+            <div class="absolute bottom-4 left-4">
+              <h3 class="text-xl font-bold">StudySync</h3>
+              <p class="text-sm opacity-80">OpenAi, Auth0</p>
+            </div>
+          </div>
+          <p class="mb-4 opacity-90">
+            A study site that lets users transcribe from Speach to text and
+            video to text to get a summarzied description as well as quiz
+            generations <p class=" mb-4 text-sm opacity-60">(Built at Hack The North!)</p>
+          </p>
+          <div class="flex justify-between items-center">
+            <div class="flex space-x-2">
+              <span class="skill-bubble px-3 py-1 rounded-full text-xs"
+                >OpenAi</span
+              >
+              <span class="skill-bubble px-3 py-1 rounded-full text-xs"
+                >Auth0</span
+              >
+            </div>
+            <a href="https://devpost.com/software/studying-with-hack-the-north" class="text-indigo-400 hover:text-indigo-300">
+              <i class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+        </div>
         <!-- Project 3 -->
         <div class="project-card glass-card p-6 rounded-2xl cursor-pointer" data-link="moodify.html" tabindex="0">
           <div class="relative h-48 mb-6 rounded-xl overflow-hidden">
@@ -484,89 +568,6 @@
               >
             </div>
             <a href="#" class="text-indigo-400 hover:text-indigo-300">
-              <i class="fas fa-external-link-alt"></i>
-            </a>
-          </div>
-        </div>
-
-        
-
-
-        <!-- Project 5 -->
-        <div class="project-card glass-card p-6 rounded-2xl relative cursor-pointer" data-link="studysync.html" tabindex="0">
-          <div class="hackathon-badge">
-            <i class="fas fa-trophy mr-1"></i> Best Data-Hack
-          </div>
-          <div class="relative h-48 mb-6 rounded-xl overflow-hidden">
-            <img
-              src="OdinAnalytica.png"
-              alt="Project 5"
-              class="w-full h-full object-cover"
-            />
-            <div
-              class="absolute inset-0 bg-gradient-to-t from-black to-transparent opacity-70"
-            ></div>
-            <div class="absolute bottom-4 left-4">
-              <h3 class="text-xl font-bold">OdinAnalytica</h3>
-              <p class="text-sm opacity-80">Yolov8, Mapbox</p>
-            </div>
-          </div>
-          <p class="mb-4 opacity-90">
-            Hackathon winner, turned Start up, that does Yolo Crash detection and traffic analytics on street footage with interactive MapBox
-            display <p class=" mb-4 text-sm opacity-60">(Built at Geese Hacks!)</p>
-          </p>
-          <div class="flex justify-between items-center">
-            <div class="flex space-x-2">
-              <span class="skill-bubble px-3 py-1 rounded-full text-xs"
-                >Yolov8</span
-              >
-              <span class="skill-bubble px-3 py-1 rounded-full text-xs"
-                >Mapbox</span
-              >
-            </div>
-            <a
-              href="https://www.odinanalytica.ca/"
-              class="text-indigo-400 hover:text-indigo-300"
-            >
-              <i class="fas fa-external-link-alt"></i>
-            </a>
-          </div>
-        </div>
-
-        <!-- Project 6 -->
-        <div class="project-card glass-card p-6 rounded-2xl relative">
-          <div class="hackathon-badge">
-            <i class="fas fa-trophy mr-1"></i> Best use of Auth0
-          </div>
-          <div class="relative h-48 mb-6 rounded-xl overflow-hidden">
-            <img
-              src="StudySync.png"
-              alt="Project 6"
-              class="w-full h-full object-cover"
-            />
-            <div
-              class="absolute inset-0 bg-gradient-to-t from-black to-transparent opacity-70"
-            ></div>
-            <div class="absolute bottom-4 left-4">
-              <h3 class="text-xl font-bold">StudySync</h3>
-              <p class="text-sm opacity-80">OpenAi, Auth0</p>
-            </div>
-          </div>
-          <p class="mb-4 opacity-90">
-            A study site that lets users transcribe from Speach to text and
-            video to text to get a summarzied description as well as quiz
-            generations <p class=" mb-4 text-sm opacity-60">(Built at Hack The North!)</p>
-          </p>
-          <div class="flex justify-between items-center">
-            <div class="flex space-x-2">
-              <span class="skill-bubble px-3 py-1 rounded-full text-xs"
-                >OpenAi</span
-              >
-              <span class="skill-bubble px-3 py-1 rounded-full text-xs"
-                >Auth0</span
-              >
-            </div>
-            <a href="https://devpost.com/software/studying-with-hack-the-north" class="text-indigo-400 hover:text-indigo-300">
               <i class="fas fa-external-link-alt"></i>
             </a>
           </div>
