added link to devpost

--- a/odinanalytica.html
+++ b/odinanalytica.html
@@ -92,6 +92,13 @@
               class="px-4 py-2 bg-indigo-600 rounded-lg hover:bg-indigo-700"
               >Website</a
             >
+            <a
+              href="https://devpost.com/software/odinanalytica"
+              target="_blank"
+              rel="noopener"
+              class="px-4 py-2 bg-indigo-600 rounded-lg hover:bg-indigo-700"
+              >Devpost</a
+            >
           </div>
         </div>
       </div>
