restructure project folders and correct references

--- a/Almaari/wardrobe-organizer.html
+++ b/Almaari/wardrobe-organizer.html
@@ -50,17 +50,17 @@
   </head>
   <body>
     <nav class="container mx-auto px-6 py-6 flex justify-between items-center">
-      <a href="index.html#projects" class="text-2xl font-bold">
+      <a href="../index.html#projects" class="text-2xl font-bold">
         <span class="text-indigo-400">Manveer </span>Sohal
       </a>
-      <a href="index.html#projects" class="nav-link">Back to Projects</a>
+      <a href="../index.html#projects" class="nav-link">Back to Projects</a>
     </nav>
 
     <main class="container mx-auto px-6 pb-24">
       <header class="py-10">
         <div class="flex items-center gap-2">
           <img
-            src="Almaari/almaari-mascot-waving.png"
+            src="almaari-mascot-waving.png"
             alt="Almaari"
             class="w-20 h-20"
           />
@@ -85,7 +85,7 @@
       <div class="grid md:grid-cols-2 gap-8 items-start">
         <div class="glass-card rounded-2xl overflow-hidden">
           <img
-            src="Almaari/dashboard.png"
+            src="dashboard.png"
             alt="Wardrobe Organizer"
             class="w-full h-full object-cover"
           />
@@ -128,7 +128,7 @@
       <div class="grid md:grid-cols-2 gap-8 items-start">
         <div class="glass-card rounded-2xl overflow-hidden">
           <img
-            src="Almaari/addClothes.png"
+            src="addClothes.png"
             alt="Wardrobe Organizer"
             class="w-full h-full object-cover"
           />
@@ -152,7 +152,7 @@
       <div class="grid md:grid-cols-2 gap-8 items-start">
         <div class="glass-card rounded-2xl overflow-hidden">
           <img
-            src="Almaari/Sweater-added.png"
+            src="Sweater-added.png"
             alt="Wardrobe Organizer"
             class="w-full h-full object-cover"
           />
@@ -177,7 +177,7 @@
       <div class="grid md:grid-cols-2 gap-8 items-start">
         <div class="glass-card rounded-2xl overflow-hidden">
           <img
-            src="Almaari/Clothes-picked.png"
+            src="Clothes-picked.png"
             alt="Wardrobe Organizer"
             class="w-full h-full object-cover"
           />
@@ -194,7 +194,7 @@
               Users can also get tips on how to style their clothes from an AI
               assistant named Almaari!
               <img
-                src="Almaari/almaari-mascot-waving.png"
+                src="almaari-mascot-waving.png"
                 alt="Almaari"
                 class="w-20 h-20"
               />
