--- a/Moodify/moodify.html
+++ b/Moodify/moodify.html
@@ -50,10 +50,10 @@
   </head>
   <body>
     <nav class="container mx-auto px-6 py-6 flex justify-between items-center">
-      <a href="index.html#projects" class="text-2xl font-bold">
+      <a href="../index.html#projects" class="text-2xl font-bold">
         <span class="text-indigo-400">Manveer </span>Sohal
       </a>
-      <a href="index.html#projects" class="nav-link">Back to Projects</a>
+      <a href="../index.html#projects" class="nav-link">Back to Projects</a>
     </nav>
 
     <main class="container mx-auto px-6 pb-24">
