--- a/creator-control-room/creator-control-room.html
+++ b/creator-control-room/creator-control-room.html
@@ -59,10 +59,10 @@
   </head>
   <body>
     <nav class="container mx-auto px-6 py-6 flex justify-between items-center">
-      <a href="index.html#projects" class="text-2xl font-bold">
+      <a href="../index.html#projects" class="text-2xl font-bold">
         <span class="text-indigo-400">Manveer </span>Sohal
       </a>
-      <a href="index.html#projects" class="nav-link">Back to Projects</a>
+      <a href="../index.html#projects" class="nav-link">Back to Projects</a>
     </nav>
 
     <main class="container mx-auto px-6 pb-24">
@@ -124,7 +124,7 @@
       <div class="grid md:grid-cols-2 gap-8 items-start">
         <div class="glass-card rounded-2xl overflow-hidden">
           <img
-            src="creator-control-room/dashboard.png"
+            src="dashboard.png"
             alt="Dashboard"
             class="w-full h-full object-cover"
           />
@@ -156,7 +156,7 @@
       <div class="grid md:grid-cols-2 gap-8 items-start">
         <div class="glass-card rounded-2xl overflow-hidden">
           <img
-            src="creator-control-room/sign-on.png"
+            src="sign-on.png"
             alt="Dashboard"
             class="w-full h-full object-cover"
           />
