--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
 
          <!-- Project 1 -->
-        <div class="project-card glass-card p-6 rounded-2xl cursor-pointer" data-link="wardrobe-organizer.html" tabindex="0">
+        <div class="project-card glass-card p-6 rounded-2xl cursor-pointer" data-link="Almaari/wardrobe-organizer.html" tabindex="0">
           <div class="relative h-48 mb-6 rounded-xl overflow-hidden">
             <img
               src="Almaari/dashboard.png"
@@ -362,10 +362,10 @@
         </div>
 
          <!-- Project 1 -->
-        <div class="project-card glass-card p-6 rounded-2xl cursor-pointer" data-link="creator-control-room.html" tabindex="0">
+        <div class="project-card glass-card p-6 rounded-2xl cursor-pointer" data-link="creator-control-room/creator-control-room.html" tabindex="0">
           <div class="relative h-48 mb-6 rounded-xl overflow-hidden">
             <img
-              src="Creator_Control_Room.png"
+              src="creator-control-room/Creator_Control_Room.png"
               alt="Project 1"
               class="w-full h-full object-cover"
             />
@@ -403,13 +403,13 @@
 
 
         <!-- Project 5 -->
-        <div class="project-card glass-card p-6 rounded-2xl relative cursor-pointer" data-link="odinanalytica.html" tabindex="0">
+        <div class="project-card glass-card p-6 rounded-2xl relative cursor-pointer" data-link="Odin-Analytica/odinanalytica.html" tabindex="0">
           <div class="hackathon-badge">
             <i class="fas fa-trophy mr-1"></i> Best Data-Hack
           </div>
           <div class="relative h-48 mb-6 rounded-xl overflow-hidden">
             <img
-              src="OdinAnalytica.png"
+              src="Odin-Analytica/OdinAnalytica.png"
               alt="Project 5"
               class="w-full h-full object-cover"
             />
@@ -446,10 +446,10 @@
        
 
         <!-- Project 2 -->
-        <div class="project-card glass-card p-6 rounded-2xl cursor-pointer" data-link="nba-shooting-dashboard.html" tabindex="0">
+        <div class="project-card glass-card p-6 rounded-2xl cursor-pointer" data-link="nba-shooting-dashboard/nba-shooting-dashboard.html" tabindex="0">
           <div class="relative h-48 mb-6 rounded-xl overflow-hidden">
             <img
-              src="NBA_Dashboardv3.png"
+              src="nba-shooting-dashboard/NBA_Dashboardv3.png"
               alt="Project 2"
               class="w-full h-full object-cover"
             />
@@ -497,13 +497,13 @@
 
 
         <!-- Project 6 -->
-        <div class="project-card glass-card p-6 rounded-2xl relative cursor-pointer" data-link="studysync.html" tabindex="0">
+        <div class="project-card glass-card p-6 rounded-2xl relative cursor-pointer" data-link="studysync/studysync.html" tabindex="0">
           <div class="hackathon-badge">
             <i class="fas fa-trophy mr-1"></i> Best use of Auth0
           </div>
           <div class="relative h-48 mb-6 rounded-xl overflow-hidden">
             <img
-              src="StudySync.png"
+              src="studysync/StudySync.png"
               alt="Project 6"
               class="w-full h-full object-cover"
             />
@@ -535,10 +535,10 @@
           </div>
         </div>
         <!-- Project 3 -->
-        <div class="project-card glass-card p-6 rounded-2xl cursor-pointer" data-link="moodify.html" tabindex="0">
+        <div class="project-card glass-card p-6 rounded-2xl cursor-pointer" data-link="Moodify/moodify.html" tabindex="0">
           <div class="relative h-48 mb-6 rounded-xl overflow-hidden">
             <img
-              src="moodify.png"
+              src="Moodify/moodify.png"
               alt="Project 3"
               class="w-full h-full object-cover"
             />
