--- a/nba-shooting-dashboard/nba-shooting-dashboard.html
+++ b/nba-shooting-dashboard/nba-shooting-dashboard.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StudySync | Project</title>
+    <title>NBA Shooting Dashboard | Project</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
@@ -50,26 +50,28 @@
   </head>
   <body>
     <nav class="container mx-auto px-6 py-6 flex justify-between items-center">
-      <a href="index.html#projects" class="text-2xl font-bold">
+      <a href="../index.html#projects" class="text-2xl font-bold">
         <span class="text-indigo-400">Manveer </span>Sohal
       </a>
-      <a href="index.html#projects">Back to Projects</a>
+      <a href="../index.html#projects" class="nav-link">Back to Projects</a>
     </nav>
 
     <main class="container mx-auto px-6 pb-24">
       <header class="py-10">
-        <h1 class="text-3xl md:text-5xl font-bold mb-4">StudySync</h1>
+        <h1 class="text-3xl md:text-5xl font-bold mb-4">
+          NBA Shooting Dashboard
+        </h1>
         <p class="opacity-80 max-w-3xl">
-          A study site that lets users transcribe from speech to text and video
-          to text to get a summarized description as well as quiz generation.
+          Interactive dashboard to analyze NBA players current season stats with
+          analysis.
         </p>
       </header>
 
       <div class="grid md:grid-cols-2 gap-8 items-start">
         <div class="glass-card rounded-2xl overflow-hidden">
           <img
-            src="StudySync.png"
-            alt="StudySync"
+            src="NBA_Dashboardv3.png"
+            alt="NBA Shooting Dashboard"
             class="w-full h-full object-cover"
           />
         </div>
@@ -77,19 +79,28 @@
           <h2 class="text-xl font-semibold mb-4">Tech Stack</h2>
           <div class="flex flex-wrap gap-2 mb-6">
             <span class="skill-bubble px-3 py-1 rounded-full text-xs"
-              >OpenAI</span
+              >Python</span
             >
             <span class="skill-bubble px-3 py-1 rounded-full text-xs"
-              >Auth0</span
+              >Pandas</span
+            >
+            <span class="skill-bubble px-3 py-1 rounded-full text-xs"
+              >Matplotlib</span
+            >
+            <span class="skill-bubble px-3 py-1 rounded-full text-xs"
+              >Seaborn</span
+            >
+            <span class="skill-bubble px-3 py-1 rounded-full text-xs"
+              >Dash</span
             >
           </div>
           <div class="flex gap-4">
             <a
-              href="https://devpost.com/software/studying-with-hack-the-north"
+              href="https://nba-dashboard-nloi.onrender.com/"
               target="_blank"
               rel="noopener"
               class="px-4 py-2 bg-indigo-600 rounded-lg hover:bg-indigo-700"
-              >Devpost</a
+              >Live Demo</a
             >
           </div>
         </div>
