--- a/creator-control-room/creator-control-room.html
+++ b/creator-control-room/creator-control-room.html
@@ -3,12 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Creator Control Room | Project</title>
+    <title>Creator Control Room | Manveer Sohal</title>
+    <meta name="description" content="Creator Control Room — realtime dashboard for Twitch events with creator auth and live trends." />
+    <meta property="og:title" content="Creator Control Room | Manveer Sohal" />
+    <meta property="og:description" content="Realtime Twitch analytics dashboard with creator auth and live events." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="Creator_Control_Room.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Plus+Jakarta+Sans:wght@400;600;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="../style.css" />
      <!-- Mermaid (ESM) -->
     <script type="module">
       import mermaid from "https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs";
@@ -18,46 +27,22 @@
       });
     </script>
 
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
-
-      :root {
-        --primary: #6366f1;
-        --secondary: #8b5cf6;
-        --dark: #1e293b;
-        --light: #f8fafc;
-      }
-
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: "Poppins", sans-serif;
-      }
-
-      body {
-        background: linear-gradient(135deg, #0f172a, #1e293b);
-        color: var(--light);
-        min-height: 100vh;
-      }
-
-      .glass-card {
-        background: rgba(255, 255, 255, 0.1);
-        backdrop-filter: blur(10px);
-        -webkit-backdrop-filter: blur(10px);
-        border-radius: 20px;
-        border: 1px solid rgba(255, 255, 255, 0.18);
-        box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-        transition: all 0.3s ease;
-      }
-
-      .skill-bubble {
-        background: rgba(99, 102, 241, 0.2);
-        border: 1px solid rgba(99, 102, 241, 0.5);
-      }
-    </style>
+    
   </head>
   <body>
+    <!-- Floating Liquid Shapes -->
+    <div
+      class="liquid-shape bg-purple-500 top-1/4 left-1/4"
+      style="animation-delay: 0s"
+    ></div>
+    <div
+      class="liquid-shape bg-indigo-500 bottom-1/4 right-1/4"
+      style="animation-delay: 2s"
+    ></div>
+    <div
+      class="liquid-shape bg-blue-500 top-1/3 right-1/3"
+      style="animation-delay: 4s"
+    ></div>
     <nav class="container mx-auto px-6 py-6 flex justify-between items-center">
       <a href="../index.html#projects" class="text-2xl font-bold">
         <span class="text-indigo-400">Manveer </span>Sohal
@@ -66,7 +51,7 @@
     </nav>
 
     <main class="container mx-auto px-6 pb-24">
-      <header class="py-10">
+      <header class="py-10 reveal-on-scroll">
         <h1 class="text-3xl md:text-5xl font-bold mb-4">
           Creator Control Room
         </h1>
@@ -78,8 +63,8 @@
         </p>
       </header>
 
-      <div class="grid md:grid-cols-2 gap-8 items-start">
-        <div class="glass-card rounded-2xl overflow-hidden">
+      <div class="grid md:grid-cols-2 gap-8 items-start reveal-on-scroll">
+        <div class="glass-card rounded-2xl overflow-hidden project-media">
           <img
             src="Creator_Control_Room.png"
             alt="Creator Control Room"
@@ -95,9 +80,7 @@
             <span class="skill-bubble px-3 py-1 rounded-full text-xs"
               >React</span
             >
-            <span class="skill-bubble px-3 py-1 rounded-full text-xs"
-              >Socket.io</span
-            >
+            <span class="skill-bubble px-3 py-1 rounded-full text-xs">Socket.io</span>
             <span class="skill-bubble px-3 py-1 rounded-full text-xs"
               >Docker</span
             >
@@ -117,12 +100,12 @@
           </div>
         </div>
       </div>
-      <div class="w-full my-6">
+      <div class="w-full my-6 reveal-on-scroll">
         <h2 class="text-center text-4xl font-semibold mb-4">Features</h2>
       </div>
 
-      <div class="grid md:grid-cols-2 gap-8 items-start">
-        <div class="glass-card rounded-2xl overflow-hidden">
+      <div class="grid md:grid-cols-2 gap-8 items-start reveal-on-scroll">
+        <div class="glass-card rounded-2xl overflow-hidden project-media">
           <img
             src="dashboard.png"
             alt="Dashboard"
@@ -153,8 +136,8 @@
       <br />
       <br />
 
-      <div class="grid md:grid-cols-2 gap-8 items-start">
-        <div class="glass-card rounded-2xl overflow-hidden">
+      <div class="grid md:grid-cols-2 gap-8 items-start reveal-on-scroll">
+        <div class="glass-card rounded-2xl overflow-hidden project-media">
           <img
             src="sign-on.png"
             alt="Dashboard"
@@ -177,7 +160,7 @@
       <br />
       <br />
 
-      <div class="grid md:grid-cols-1 gap-8 items-start">
+      <div class="grid md:grid-cols-1 gap-8 items-start reveal-on-scroll">
         <div class="glass-card p-6 rounded-2xl">
           <h2 class="text-2xl font-semibold mb-4 text-center">How it works</h2>
           <div class="gird grid-cols-2 gap-2 mb-6">
@@ -241,5 +224,6 @@ erDiagram
         </div>
       </div>
     </main>
+    <script src="../main.js"></script>
   </body>
 </html>
