meta image on links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Manveer Sohal | Portfolio" />
     <meta property="og:description" content="Explore projects, skills, and ways to connect with Manveer." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="OAD-Dashboard.png" />
+    <meta property="og:image" content="meta-image.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
